--- a/.github/workflows/dotnet-windows.yml
+++ b/.github/workflows/dotnet-windows.yml
@@ -3,11 +3,11 @@ name: .NET Windows
 on:
   push:
     branches:
-        - master
+        - main
         - develop
   pull_request:
     branches:
-        - master
+        - main
         - develop
 
 jobs:
@@ -16,11 +16,11 @@ jobs:
     runs-on: windows-latest
 
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v3
     - name: Setup .NET
-      uses: actions/setup-dotnet@v1
+      uses: actions/setup-dotnet@v3
       with:
-        dotnet-version: 5.0.x
+        dotnet-version: 8.0.x
     - name: Clean
       run: dotnet clean && dotnet nuget locals all --clear
     - name: Restore dependencies
