Added current branch to ci files

--- a/.github/workflows/dotnet-windows.yml
+++ b/.github/workflows/dotnet-windows.yml
@@ -5,10 +5,12 @@ on:
     branches:
         - main
         - develop
+        - 19-radar-konstruktor
   pull_request:
     branches:
         - main
         - develop
+        - 19-radar-konstruktor
 
 jobs:
   build:
