--- a/.github/workflows/dotnet-ubuntu.yml
+++ b/.github/workflows/dotnet-ubuntu.yml
@@ -5,10 +5,12 @@ on:
     branches: 
         - master
         - develop
+        - 19-radar-konstruktor
   pull_request:
     branches: 
         - master
         - develop
+        - 19-radar-konstruktor
 
 jobs:
   build:
